--- a/src/pages/main/components/Header.css
+++ b/src/pages/main/components/Header.css
@@ -3,32 +3,31 @@ body{
     padding: 0px;
 }
 
-.menu-bar{
-    display: flex;
-    flex-direction: row;
-    background-color: rgba(0, 135, 164, 1);
-    justify-content: center;
 
+
+
+.menu-bar {
+    background: rgb(111, 111, 121, 1);
+    text-align: center;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
 }
 
-.menu-bar .ul{
-    display: flex;
-    flex-direction: row;
-    background-color: rgba(0, 135, 164, 1);
-    justify-content: center;
-}
-
-.menu-bar .ul li{
-    margin-left: 28px;
-    padding: 10px;
-    color: #fff;
-    font-size: 20px;
-    border-radius: 5px;
-    width: 90px;
+.ul-menu {
+    display: inline-flex;
     list-style: none;
+    color: #fff;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    box-shadow: 0px 0px 8px 12px black;
+
 }
 
-.menu-bar ul li:hover{
-    background-color: #00c7d9;
+.go{
+    background-color: #00cdff;
+    border-radius: 5px;
 }
-
