--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,10 +1,8 @@
-body > div{
+
+.container{
     background-image: url("/src/pages/pictures/Login.PNG") ;
     background-repeat: no-repeat;
     overflow: hidden;
-}
-
-.container{
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -56,6 +54,13 @@ body > div{
     margin-left: 100px;
     border: 2px solid blue;
     background-color: #006fff;
+    cursor: pointer;
+}
+
+.login button:active{
+    /*transform: translateY(1px);*/
+    box-shadow: 0px -1px 0px 1px #3e8e41;
+    transform: scale(98%,98%);
 }
 
 /*/////////IMAGE STYLE + ANIMATION////////*/
