--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -1,3 +1,17 @@
-body{
-    background-image: none;
+.main{
+    height: 100%;
+    width: 100%;
+    position: fixed;
 }
+
+Header{
+    height: 10%;
+    width: 100%;
+}
+
+Footer{
+    width: 100%;
+    margin-top: 84vh;
+    position: fixed;
+}
+
