--- a/src/pages/main/components/List.css
+++ b/src/pages/main/components/List.css
@@ -12,16 +12,21 @@
 }
 
 .sub-menu-1 {
+    display: flex;
+    justify-content: center;
     position: absolute;
     background: #049fce;
     border: 2px solid blue;
-    margin-top: 15px;
-    margin-left: -70px;
+    /*margin-top: 15px;*/
+    margin-right: 6rem;
     z-index: 3;
 }
 
 .ul-sub-menu{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
     margin: 10px;
     list-style: none;
     color: #fff;
@@ -29,5 +34,5 @@
     margin-block-end: 0px;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    padding-inline-start: 40px;
+    /*padding-inline-start: 40px;*/
 }
